fixed layerbox overflow bug

--- a/src/common/less/screen-paint.less
+++ b/src/common/less/screen-paint.less
@@ -280,7 +280,7 @@
     top: 40px;
     right: 0;
     bottom: 0;
-    width: 203px;
+    width: 220px;
     border: 1px solid @dark;
     background: @dark;
   }
@@ -326,7 +326,9 @@
   #FrameBox {
 
     #FrameBoxFrames {
-      margin: 5px auto;
+      width: 200px;
+      margin: 10px;
+      text-align: center;
     }
 
     .frame {
@@ -335,6 +337,7 @@
       cursor: pointer;
       position: relative;
       z-index: 1;
+      text-align: left;
       border-collapse: collapse;
       display: inline-table;
       margin-top: -1px;
@@ -496,7 +499,7 @@
 
   .statusbar {
     left: 43px;
-    right: 203px;
+    right: 220px;
   }
 
   .bar > * {
